// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > should render 1`] = `
<DocumentFragment>
  <label
    class="flex items-center h-4 cursor-pointer"
  >
    <input
      class="sr-only toggle-input"
      type="checkbox"
    />
    <div
      class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
    >
      <span
        class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-secondary-400 handle-inner dark:bg-theme-secondary-600"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render always on 1`] = `
<DocumentFragment>
  <label
    class="flex items-center h-4 cursor-pointer"
  >
    <input
      class="sr-only toggle-input"
      type="checkbox"
    />
    <div
      class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
    >
      <span
        class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-600 handle-inner"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render disabled 1`] = `
<DocumentFragment>
  <label
    class="flex items-center h-4 cursor-not-allowed"
  >
    <input
      class="sr-only toggle-input"
      disabled=""
      type="checkbox"
    />
    <div
      class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
    >
      <span
        class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render small 1`] = `
<DocumentFragment>
  <label
    class="flex items-center h-3 cursor-pointer"
  >
    <input
      class="sr-only toggle-input"
      type="checkbox"
    />
    <div
      class="inline-flex relative w-6 rounded-full toggle-handle bg-theme-primary-100 h-[5px] dark:bg-theme-secondary-800"
    >
      <span
        class="absolute top-1/2 w-3 h-3 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-secondary-400 handle-inner dark:bg-theme-secondary-600"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="flex items-center h-4 cursor-pointer"
  >
    <input
      class="sr-only toggle-input"
      type="checkbox"
    />
    <div
      class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
    >
      <span
        class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-secondary-400 handle-inner dark:bg-theme-secondary-600"
      />
    </div>
  </label>
</DocumentFragment>
`;
